# rocky-release-readiness-platform

./: .env.example  .gitignore  ARTIFACT-PROMPT.md  Makefile  PLAN.md  README.md  SPEC.md  TASKS.md  docker-compose.yml
.taskmaster/: state.json
.taskmaster/docs/: onbelay-prd.md
.taskmaster/tasks/: tasks.json
backend/: Dockerfile  pyproject.toml  run_tests.sh  seed_playbook.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_result_comment.py  003_quick_report_and_bug_url.py  004_milestone_dates.py  005_milestone_download_url.py  006_section_category.py  007_backfill_new_categories.py  008_user_accounts.py
backend/app/: main.py
backend/app/api/v1/: admin.py  auth.py  export.py  import_results.py  milestones.py  releases.py  results.py  router.py  sections.py  test_cases.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  milestone.py  release.py  result.py  section.py  test_case.py  user.py
backend/app/schemas/: milestone.py  release.py  result.py  section.py  test_case.py
backend/tests/: conftest.py  test_auth.py  test_carry_forward.py  test_export.py  test_milestones.py  test_releases.py  test_results.py
deploy/: crag-backend.service  crag-db.service  crag-frontend.service  r3p-backend.service  r3p-db.service  r3p-frontend.service
docs/: 00-IMPLEMENTATION-PLAN.md
docs/architecture/: POC-HOSTING.md  TECH-STACK.md
docs/decisions/: 001-backend-framework.md  002-frontend-framework.md  (+1 more)
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.js
(+26 files in other folders)
